Fixing a visual bug when the amount was too big.

--- a/src/client/components/PageHeader/PageHeader.css
+++ b/src/client/components/PageHeader/PageHeader.css
@@ -25,7 +25,7 @@
   text-decoration: none;
   font-family: sansSerif;
   display: block;
-  margin-left: 20px;
+  margin-left: 30px;
   font-size: 13px;
   padding: 12px 0;
   position: relative;
