--- a/src/client/routes/Monthly/components/Category/Category.css
+++ b/src/client/routes/Monthly/components/Category/Category.css
@@ -8,6 +8,7 @@
   align-items: center;
   padding-right: 0;
   padding-left: 0;
+  flex-wrap: wrap;
 }
 
 .name,
